feat: Adicionando testes e lógica de logs

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
-    <div class="container">
+    <div id="app" class="container">
       <header>
         <h1>Pipeline de Entrega Contínua</h1>
         <p>Este site foi publicado automaticamente via GitHub Actions.</p>
@@ -56,5 +56,6 @@
         <p>Laboratório de GCS</p>
       </footer>
     </div>    
+    <script type="module" src="/src/main.js"></script>
   </body>
 </html>
